[package]
name = "sage_broker"
version = "0.1.3"
description = "MQTT 5.0 broker"
authors = ["Kevin D'ORANGE <kevin.dorange@gmail.com>"]
edition = "2018"
repository = "https://github.com/OragonEfreet/sage_broker"
readme = "README.md"
license = "MIT"
keywords = ["mqtt", "broker", "iot"]
categories = ["command-line-utilities", "network-programming", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="1.9.0",features = ["attributes"]}
async-trait = "0.1.50"
futures = "0.3.14"
log = "0.4.14"
nanoid = "0.4.0"
pretty_env_logger = "0.4.0"
sage_mqtt = "0.2" 

[dev-dependencies]
rand = "0.8.0"
